--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.4.4",
+    "angular-route": "^1.4.4",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-uglify": "^1.2.0",
-    "gulp-watch": "^4.3.4",
     "path": "^0.11.14"
   }
 }
